k8s/UserService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: bookshop
  labels:
    app: user
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 3001
  selector:
    app: user
