k8s/UserService/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  namespace: bookshop
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /user
            pathType: "Prefix"
            backend:
              service:
                name: user-service
                port:
                  number: 8080
